Adjusting css on main page, modified map page to handle large map on small screen, issue with @media on maps page moved around headers, neatened some code

--- a/pokedex-plus/css/master.css
+++ b/pokedex-plus/css/master.css
@@ -8,6 +8,7 @@ body {
   flex-direction: row;
   align-content: center;
   justify-content: center;
+  margin: 0;
 }
 /* #pokedexCover {
   margin-top: 10vw;
@@ -39,7 +40,6 @@ body {
   margin-top: 8vw;
   background-color: darkred;
   box-shadow: 5px 10px 8px;
-  /* visibility: hidden; */
 }
 header {
   position: fixed;
@@ -71,9 +71,6 @@ input[type=submit] {
   color: white;
 }
 
-/* * {
-  border: red 2px solid;
-} */
 button {
   display: none;
   margin: 0;
@@ -84,23 +81,23 @@ button {
   border: black;
 }
 #prev > img {
-  height: 20%;
-  width: 100%;
+  max-height: 100%;
+  max-width: 100%;
 }
 #next > img {
-  height: 20%;
-  width: 100%;
+  max-height: 100%;
+  max-width: 100%;
 }
 header {
   height: 4vw;
-  width: 95%;
+  width: 100%;
   text-align: center;
 }
 .display {
   width: 75%;
   display: flex;
   flex-direction: column;
-  background-color: white;
+  background-color: rgb(233, 233, 233);
   /* border: red 5px solid; */
   border-radius: 12px;
 
@@ -141,11 +138,12 @@ header {
 }
 
 .containerBeta {
-  height: 100%;
+  /* height: 100%; */
   font-size: 4.5vw;
 }
-.additionalInfo {
-  height: 100%
+#flavorText {
+  height: 30vw;
+  overflow: scroll;
 }
 
 .row {
@@ -181,13 +179,15 @@ header {
 @media (min-width: 520px) {
   body {
   width: 80%;
-  margin-left: 15%;
+  margin: 0;
   }
   header {
+    width: 100%;
     height: 4vw;
   }
   form {
     height: 5vw;
+    margin-left: 5%;
   }
   input[type=text] {
     font-size: 2.6vw;
@@ -220,9 +220,11 @@ header {
 @media (min-width: 990px) {
   body {
   width: 60%;
-  margin-left: 20%;
+  margin: 0;
+  /* margin-left: 20%; */
   }
   header {
+    width: 100%;
     height: 3vw;
   }
   form {
@@ -238,6 +240,7 @@ header {
   }
   .display {
     width: 55%;
+    height: 80%;
   }
   .containAll{
     margin-top: 2.6vw;
@@ -253,10 +256,17 @@ header {
   button {
     border-radius: 4px;
   }
+  #flavorText {
+    height: 10vw;
+  }
 }
 
 
 /* graveyard
-
-
- */
+/* .additionalInfo {
+  height: 100%;
+} */
+/* h6 {
+  margin: 0 auto;
+  padding-left: 10%;
+} */
