--- a/pokedex-plus/css/second.css
+++ b/pokedex-plus/css/second.css
@@ -1,7 +1,17 @@
+* {
+  border: 2px black solid;
+}
+
+
 body {
+  width: 90%;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  /* margin-left: 0;
+  margin-right: 0;
+  margin: 0;
+  align-self: center; */
 }
 img {
   border: solid 5px black;
@@ -16,5 +26,40 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-left: 10vw;
+  /* margin-left: 7%; */
 }
+
+.mapSection {
+  align-self: center;
+  max-height: 300px;
+  max-width: 300px;
+  overflow: scroll;
+}
+h3 {
+  text-align: center;
+  width: 100%;
+}
+
+// Responsive Design
+/* @media (max-width: 519px) {
+  .mapSection {
+
+  }
+}
+
+@media (min-width: 520px) {
+  .mapSection {
+    max-width: 800px;
+    max-height: 800px;
+    overflow: visible;
+  }
+} */
+
+
+/* @media (min-width: 700px) {
+  .mapSection {
+    height: 500px;
+    width: 500px;
+
+  }
+} */
